Attempted to set Java Version to Java 8 to help with creating a jar